# butler

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/kernel/: CONTEXT.md  task-calendar-sync.ts
src/kernel/db/: index.ts
src/kernel/event-bus/: index.ts
src/kernel/router/: index.ts
src/kernel/workspace/: WorkspaceProvider.tsx  index.ts  store.ts
src/modules/calendar/: AgendaView.tsx  CONTEXT.md  DateTimePicker.tsx  DayView.tsx  EventForm.tsx  Shell.tsx  TaskEventPanel.tsx  WeekView.tsx  db.ts  events.ts  index.tsx  manifest.ts  store.ts
src/modules/database/: CONTEXT.md  db.ts  events.ts  index.tsx  manifest.ts  repository.ts  schema.sql  service.test.ts  service.ts  store.ts  types.ts
src/modules/focus/: CONTEXT.md  db.ts  events.ts  index.tsx  manifest.ts  store.ts
src/modules/integration/: index.ts
src/modules/journal/: CONTEXT.md  db.ts  events.ts  index.tsx  main.tsx.patch  manifest.ts  store.ts
src/modules/notes/: db.ts  index.tsx  store.ts
src/modules/planner/: db.ts  index.tsx  store.ts
src/modules/projects/: CONTEXT.md  ProjectCard.tsx  ProjectDetail.tsx  db.ts  index.tsx  manifest.ts  store.ts
src/modules/research/: CONTEXT.md  (+5 more)
src/shared/: ErrorBoundary.tsx  RichEditor.tsx  types.ts  ui.tsx  utils.ts
src/shell/: CONTEXT.md  IntegrationLayer.tsx  Shell.tsx  store.ts
src/styles/: globals.css  tiptap.css
(+68 files in other folders)
